[package] 
name="server-lightning"
version="0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread" ]}
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
cln-rpc = "0.4.0"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12", features = ["json"] }
