[package]
name = "lnurl-project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
axum = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cln-rpc = "0.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
rand = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
chrono = "0.4.43"
